--- a/notebooks/ecommerce_behaviour/_0_ecom_data_pre_processing_vcleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_0_ecom_data_pre_processing_vcleaned.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2285,9 +2285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[161], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m filepath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdataset/df_ecom_initial_dataset.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Salvar o DataFrame em CSV\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(filepath, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Definir o caminho para salvar o arquivo CSV\n",
@@ -2299,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2315,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -2471,199 +2483,49 @@
        "      <td>515610113</td>\n",
        "      <td>24639c6c-74e7-4bff-bf8c-ecc89252dd53</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2019-11-15 12:30:05 UTC</td>\n",
-       "      <td>cart</td>\n",
-       "      <td>1005159</td>\n",
-       "      <td>2053013555631882655</td>\n",
-       "      <td>electronics.smartphone</td>\n",
-       "      <td>xiaomi</td>\n",
-       "      <td>202.50</td>\n",
-       "      <td>542945060</td>\n",
-       "      <td>aec88722-d9f6-4c09-9b98-7e499f5cd216</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2019-11-07 09:37:43 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>28720369</td>\n",
-       "      <td>2053013565639492569</td>\n",
-       "      <td>apparel.shoes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>128.45</td>\n",
-       "      <td>568202431</td>\n",
-       "      <td>8fd845be-3c56-484d-b209-c2caa541fa60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2019-11-15 00:05:12 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1801929</td>\n",
-       "      <td>2053013554415534427</td>\n",
-       "      <td>electronics.video.tv</td>\n",
-       "      <td>samsung</td>\n",
-       "      <td>566.04</td>\n",
-       "      <td>519413125</td>\n",
-       "      <td>e5aa131e-f33c-4b28-9fc0-94234e1c0ac4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2019-11-19 03:53:37 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>1004873</td>\n",
-       "      <td>2053013555631882655</td>\n",
-       "      <td>electronics.smartphone</td>\n",
-       "      <td>samsung</td>\n",
-       "      <td>382.76</td>\n",
-       "      <td>567662605</td>\n",
-       "      <td>43f84546-31e9-43b2-8f87-f003ab6ac072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2019-11-14 00:00:19 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>13903112</td>\n",
-       "      <td>2053013557343158789</td>\n",
-       "      <td>construction.components.faucet</td>\n",
-       "      <td>calorie</td>\n",
-       "      <td>28.64</td>\n",
-       "      <td>524823005</td>\n",
-       "      <td>f21a722b-728f-45f5-b17e-e4240f0ff4e5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2019-11-08 06:13:46 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>5701247</td>\n",
-       "      <td>2053013553970938175</td>\n",
-       "      <td>auto.accessories.player</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>77.22</td>\n",
-       "      <td>515389480</td>\n",
-       "      <td>1acf47e1-d6e9-4081-8742-8c1b533fdb65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2019-11-14 11:08:09 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>3700779</td>\n",
-       "      <td>2053013565983425517</td>\n",
-       "      <td>appliances.environment.vacuum</td>\n",
-       "      <td>xiaomi</td>\n",
-       "      <td>297.18</td>\n",
-       "      <td>517441290</td>\n",
-       "      <td>18f1998e-3277-42cb-a685-43bec8586686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2019-11-22 18:51:56 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>7101788</td>\n",
-       "      <td>2053013555464110485</td>\n",
-       "      <td>furniture.bedroom.bed</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>136.40</td>\n",
-       "      <td>513235514</td>\n",
-       "      <td>da794bb3-5e74-410e-bd9b-b57590295aed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2019-11-25 09:02:12 UTC</td>\n",
-       "      <td>view</td>\n",
-       "      <td>5000691</td>\n",
-       "      <td>2053013566100866035</td>\n",
-       "      <td>appliances.sewing_machine</td>\n",
-       "      <td>chayka</td>\n",
-       "      <td>92.64</td>\n",
-       "      <td>546777179</td>\n",
-       "      <td>f58aa8ac-5291-42e4-ba3e-641014b41a7d</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2019-11-16 12:06:52 UTC</td>\n",
-       "      <td>cart</td>\n",
-       "      <td>15700019</td>\n",
-       "      <td>2053013559733912211</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>334.37</td>\n",
-       "      <td>512405533</td>\n",
-       "      <td>c9a9eaab-da98-4950-aa54-dfc7bc64741c</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 event_time event_type  product_id          category_id  \\\n",
-       "0   2019-11-23 05:32:50 UTC       view     4804241  2053013554658804075   \n",
-       "1   2019-11-17 06:56:59 UTC       view     2900200  2053013554776244595   \n",
-       "2   2019-11-14 18:19:22 UTC       view     1307520  2053013558920217191   \n",
-       "3   2019-11-07 14:00:10 UTC       view     1004104  2053013555631882655   \n",
-       "4   2019-11-24 06:26:45 UTC       view     6201023  2053013552293216471   \n",
-       "5   2019-11-26 06:23:19 UTC       view    22700208  2053013556168753601   \n",
-       "6   2019-11-17 13:45:35 UTC       view    41100001  2090228413959766319   \n",
-       "7   2019-11-22 10:07:33 UTC       view     2702666  2053013563911439225   \n",
-       "8   2019-11-05 16:47:29 UTC       view    57000018  2152289064542273825   \n",
-       "9   2019-11-14 14:34:10 UTC       view     2601594  2053013563970159485   \n",
-       "10  2019-11-15 12:30:05 UTC       cart     1005159  2053013555631882655   \n",
-       "11  2019-11-07 09:37:43 UTC       view    28720369  2053013565639492569   \n",
-       "12  2019-11-15 00:05:12 UTC       view     1801929  2053013554415534427   \n",
-       "13  2019-11-19 03:53:37 UTC       view     1004873  2053013555631882655   \n",
-       "14  2019-11-14 00:00:19 UTC       view    13903112  2053013557343158789   \n",
-       "15  2019-11-08 06:13:46 UTC       view     5701247  2053013553970938175   \n",
-       "16  2019-11-14 11:08:09 UTC       view     3700779  2053013565983425517   \n",
-       "17  2019-11-22 18:51:56 UTC       view     7101788  2053013555464110485   \n",
-       "18  2019-11-25 09:02:12 UTC       view     5000691  2053013566100866035   \n",
-       "19  2019-11-16 12:06:52 UTC       cart    15700019  2053013559733912211   \n",
+       "                event_time event_type  product_id          category_id  \\\n",
+       "0  2019-11-23 05:32:50 UTC       view     4804241  2053013554658804075   \n",
+       "1  2019-11-17 06:56:59 UTC       view     2900200  2053013554776244595   \n",
+       "2  2019-11-14 18:19:22 UTC       view     1307520  2053013558920217191   \n",
+       "3  2019-11-07 14:00:10 UTC       view     1004104  2053013555631882655   \n",
+       "4  2019-11-24 06:26:45 UTC       view     6201023  2053013552293216471   \n",
+       "5  2019-11-26 06:23:19 UTC       view    22700208  2053013556168753601   \n",
+       "6  2019-11-17 13:45:35 UTC       view    41100001  2090228413959766319   \n",
+       "7  2019-11-22 10:07:33 UTC       view     2702666  2053013563911439225   \n",
+       "8  2019-11-05 16:47:29 UTC       view    57000018  2152289064542273825   \n",
+       "9  2019-11-14 14:34:10 UTC       view     2601594  2053013563970159485   \n",
        "\n",
-       "                        category_code     brand   price    user_id  \\\n",
-       "0         electronics.audio.headphone  defender   10.48  514690964   \n",
-       "1        appliances.kitchen.microwave        lg   90.07  542774311   \n",
-       "2                  computers.notebook    lenovo  849.42  516348595   \n",
-       "3              electronics.smartphone        bq  174.53  547470854   \n",
-       "4   appliances.environment.air_heater       NaN   72.82  518089649   \n",
-       "5                                 NaN     stels   77.22  572833601   \n",
-       "6                                 NaN       NaN   77.99  562695757   \n",
-       "7    appliances.kitchen.refrigerators   indesit  293.42  515624123   \n",
-       "8                                 NaN    alteco   46.33  515775827   \n",
-       "9                                 NaN   shivaki  183.98  515610113   \n",
-       "10             electronics.smartphone    xiaomi  202.50  542945060   \n",
-       "11                      apparel.shoes       NaN  128.45  568202431   \n",
-       "12               electronics.video.tv   samsung  566.04  519413125   \n",
-       "13             electronics.smartphone   samsung  382.76  567662605   \n",
-       "14     construction.components.faucet   calorie   28.64  524823005   \n",
-       "15            auto.accessories.player       NaN   77.22  515389480   \n",
-       "16      appliances.environment.vacuum    xiaomi  297.18  517441290   \n",
-       "17              furniture.bedroom.bed       NaN  136.40  513235514   \n",
-       "18          appliances.sewing_machine    chayka   92.64  546777179   \n",
-       "19                                NaN       NaN  334.37  512405533   \n",
+       "                       category_code     brand   price    user_id  \\\n",
+       "0        electronics.audio.headphone  defender   10.48  514690964   \n",
+       "1       appliances.kitchen.microwave        lg   90.07  542774311   \n",
+       "2                 computers.notebook    lenovo  849.42  516348595   \n",
+       "3             electronics.smartphone        bq  174.53  547470854   \n",
+       "4  appliances.environment.air_heater       NaN   72.82  518089649   \n",
+       "5                                NaN     stels   77.22  572833601   \n",
+       "6                                NaN       NaN   77.99  562695757   \n",
+       "7   appliances.kitchen.refrigerators   indesit  293.42  515624123   \n",
+       "8                                NaN    alteco   46.33  515775827   \n",
+       "9                                NaN   shivaki  183.98  515610113   \n",
        "\n",
-       "                            user_session  \n",
-       "0   0961faa8-c447-4913-a25a-9441217f5b22  \n",
-       "1   f13dad8c-724c-4ac5-81e8-964475b5738a  \n",
-       "2   ec062062-41de-44f9-a553-dd09ebed9c22  \n",
-       "3   a52b5449-372b-4ad2-9094-e85e4687a04e  \n",
-       "4   c7b32ada-c7b7-44af-83f0-f42bba37384e  \n",
-       "5   857f3357-7161-4f46-8aa1-ac3dfbd2fd10  \n",
-       "6   ae24b386-58d5-4428-baca-c1e5dea82953  \n",
-       "7   83750dd1-f2d6-4022-beb0-1d9b7e3ed6a1  \n",
-       "8   8f400b13-6279-4e20-9240-9bd4c9bac92c  \n",
-       "9   24639c6c-74e7-4bff-bf8c-ecc89252dd53  \n",
-       "10  aec88722-d9f6-4c09-9b98-7e499f5cd216  \n",
-       "11  8fd845be-3c56-484d-b209-c2caa541fa60  \n",
-       "12  e5aa131e-f33c-4b28-9fc0-94234e1c0ac4  \n",
-       "13  43f84546-31e9-43b2-8f87-f003ab6ac072  \n",
-       "14  f21a722b-728f-45f5-b17e-e4240f0ff4e5  \n",
-       "15  1acf47e1-d6e9-4081-8742-8c1b533fdb65  \n",
-       "16  18f1998e-3277-42cb-a685-43bec8586686  \n",
-       "17  da794bb3-5e74-410e-bd9b-b57590295aed  \n",
-       "18  f58aa8ac-5291-42e4-ba3e-641014b41a7d  \n",
-       "19  c9a9eaab-da98-4950-aa54-dfc7bc64741c  "
+       "                           user_session  \n",
+       "0  0961faa8-c447-4913-a25a-9441217f5b22  \n",
+       "1  f13dad8c-724c-4ac5-81e8-964475b5738a  \n",
+       "2  ec062062-41de-44f9-a553-dd09ebed9c22  \n",
+       "3  a52b5449-372b-4ad2-9094-e85e4687a04e  \n",
+       "4  c7b32ada-c7b7-44af-83f0-f42bba37384e  \n",
+       "5  857f3357-7161-4f46-8aa1-ac3dfbd2fd10  \n",
+       "6  ae24b386-58d5-4428-baca-c1e5dea82953  \n",
+       "7  83750dd1-f2d6-4022-beb0-1d9b7e3ed6a1  \n",
+       "8  8f400b13-6279-4e20-9240-9bd4c9bac92c  \n",
+       "9  24639c6c-74e7-4bff-bf8c-ecc89252dd53  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2676,7 +2538,7 @@
     "if test_data:\n",
     "    df_init = pd.read_csv(filepath_init, na_values=\"\")\n",
     "\n",
-    "    df_init: DataFrame = df.sample(frac=0.0015, replace = False)\n",
+    "    df_init: DataFrame = df.sample(frac=0.015, replace = False)\n",
     "\n",
     "else:\n",
     "    # If not test_data, load the entire dataset\n",
@@ -2686,6 +2548,26 @@
     "\n",
     "\n",
     "df_init.head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27000792"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_init.shape[0]"
    ]
   },
   {
