--- a/notebooks/ecommerce_behaviour/_0_ecom_data_pre_processing_vcleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_0_ecom_data_pre_processing_vcleaned.ipynb
@@ -3937,21 +3937,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add new extracted columns based on dataset cols"
+    "## Feature Generation - Add new extracted columns based on dataset cols"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data granularity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Add split category_code column"
+    "##### Add split category_code column - Method: Splitting Functions"
    ]
   },
   {
@@ -5035,7 +5028,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Add new event_count in session column"
+    "##### Add new event_count in session column - Method: Aggregation Functions (Count)"
    ]
   },
   {
@@ -5473,7 +5466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Add more event_time columns"
+    "##### Add more event_time columns - Method: Splitting Functions"
    ]
   },
   {
@@ -5785,7 +5778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 1st aproach - Brand Value (mean of the products added to cart)"
+    "- 1st aproach - Brand Value (mean of the products added to cart) - Method: Aggregation Functions (Average)"
    ]
   },
   {
@@ -6607,7 +6600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### product_id"
+    "###### product_id - Method: Concatenation Functions"
    ]
   },
   {
