updated general evaluation and sample balancing

--- a/notebooks/google_merch_store/7_ga4_merch_balancing.ipynb
+++ b/notebooks/google_merch_store/7_ga4_merch_balancing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -890,12 +890,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# save to csv"
+    "# unbalanced save to csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -925,26 +925,29 @@
     "    \n",
     "    # do not balance original dataset      \n",
     "    data_save=data.copy()\n",
-    "    \n",
-    "    # data_save=apply_strategy_2(data_save)\n",
-    "            \n",
+    "               \n",
     "    data_save.to_csv(f\"data/df_merch_7_bal_input.csv\", index=False)\n",
     "\n",
+    "    # sampled versions to keep consistency    \n",
+    "    sample=0.075\n",
     "\n",
-    "    print(data_save.columns)\n",
-    "\n"
+    "    data_sample = data.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
+    "    data_sample.to_csv(f\"data/df_merch_7_bal_input_sample.csv\", index=False)\n",
+    "\n",
+    "    \n",
+    "    print(data_save.columns)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## train test csv"
+    "## train test and sample csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +960,7 @@
       "1.0    26.617817\n",
       "Name: proportion, dtype: float64\n",
       "\n",
-      "Hybrid class distribution (50.0/50.0):\n",
+      "New class distribution:\n",
       "returning_user\n",
       "0.0    50.0\n",
       "1.0    50.0\n",
@@ -992,22 +995,48 @@
       "       'day_of_week_nr_cos', 'week_of_month_nr_sin', 'week_of_month_nr_cos',\n",
       "       'geo_country', 'session_engaged', 'year', 'quarter', 'is_weekend',\n",
       "       'domain', 'returning_user'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "Original class distribution:\n",
+      "returning_user\n",
+      "0.0    51.546844\n",
+      "1.0    48.453156\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "New class distribution:\n",
+      "returning_user\n",
+      "0.0    50.0\n",
+      "1.0    50.0\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "(8178, 42)\n"
      ]
     }
    ],
    "source": [
     "if test_data==False:\n",
-    "\n",
-    "    # train_save,test_save=simple_split_df(data_save,sort_by='day_of_year')\n",
-    "    \n",
+    "   \n",
     "    train_save=apply_strategy_3(train)         \n",
-    "    \n",
     "    train_save.to_csv(f\"data/df_merch_7_bal_input_train.csv\", index=False)\n",
+    " \n",
     "    print(train.columns)\n",
-    "    \n",
+    "\n",
     "    test.to_csv(f\"data/df_merch_7_bal_input_test.csv\", index=False)\n",
-    "    print(test.columns)"
+    "    print(test.columns)\n",
+    "\n",
+    "    \n",
+    "    # sampled versions to keep consistency    \n",
+    "    sample=0.075\n",
+    "    \n",
+    "    train_save_sample = train_save.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
+    "    train_save_sample=apply_strategy_3(train_save_sample)         \n",
+    "    train_save_sample.to_csv(f\"data/df_merch_7_bal_input_train_sample.csv\", index=False)\n",
+    "\n",
+    "        \n",
+    "    test_save_sample = test.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
+    "    test_save_sample.to_csv(f\"data/df_merch_7_bal_input_test_sample.csv\", index=False)\n",
+    "    \n",
+    "    \n",
+    "    print(test_save_sample.shape)"
    ]
   }
  ],
