--- a/notebooks/ecom_msg/2_6_data_prep_balancing.ipynb
+++ b/notebooks/ecom_msg/2_6_data_prep_balancing.ipynb
@@ -139,8 +139,9 @@
     }
    ],
    "source": [
-    "test_data=True\n",
-    "# test_data=False\n",
+    "\n",
+    "# test_data=True\n",
+    "test_data=False\n",
     "\n",
     "# use to evaluate strategies. otherwise False to just transform data \n",
     "evaluate=True\n",
@@ -151,34 +152,27 @@
     "\n",
     "    data=pd.read_csv(f\"{filepath}.csv\")\n",
     "    \n",
-    "    test= pd.read_csv(f\"{filepath}_test.csv\")\n",
-    "    train= pd.read_csv(f\"{filepath}_train.csv\")\n",
+    "    test= pd.read_csv(test_filepath)\n",
+    "    train= pd.read_csv(train_filepath)\n",
     "\n",
     "    # sample\n",
-    "    data=data.sample(frac=0.05, replace=False)\n",
-    "    test=test.sample(frac=0.05, replace=False)\n",
-    "    train=train.sample(frac=0.05, replace=False)\n",
+    "    sample=0.05\n",
+    "    data = data.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
+    "    test = test.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
+    "    train = train.groupby('day_of_year').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
     "    \n",
-    "    # create sample df version of test/train for variance studies\n",
-    "    test_sample= test\n",
-    "    train_sample= train\n",
     "    \n",
     "else:\n",
-    "    data=pd.read_csv(f\"{filepath}.csv\")\n",
-    "\n",
-    "    \n",
-    "    test= pd.read_csv(f\"{filepath}_test.csv\")\n",
-    "    train= pd.read_csv(f\"{filepath}_train.csv\")\n",
-    "\n",
-    "    # create sample for variance studies\n",
-    "    test_sample= test.sample(frac=0.05, replace=False)\n",
-    "    train_sample= train.sample(frac=0.05, replace=False)\n",
+    "    data=pd.read_csv(f\"{filepath}.csv\")  \n",
+    "    test= pd.read_csv(test_filepath)\n",
+    "    train= pd.read_csv(train_filepath)\n",
     "\n",
     "\n",
     "\n",
     " \n",
-    "target='is_unsubscribed'\n",
+    "target='is_clicked'\n",
     "vars: list[str] = data.columns.to_list()\n",
+    "labels: list = list(data[target].unique())\n",
     "\n",
     "\n",
     "# ensure sorting by day_of_year for correct splitting \n",
@@ -236,14 +230,12 @@
     "\n",
     "print(\"Minority class=\", positive_class, \":\", target_count[positive_class])\n",
     "print(\"Majority class=\", negative_class, \":\", target_count[negative_class])\n",
-    "print(\n",
-    "    \"Proportion:\",\n",
-    "    round(target_count[positive_class] / target_count[negative_class], 2),\n",
-    "    \": 1\",\n",
-    ")\n",
     "values: dict[str, list] = {\n",
     "    \"Original\": [target_count[positive_class], target_count[negative_class]]\n",
     "}\n",
+    "\n",
+    "print(f\"Original class distribution:\\n{data[target].value_counts(normalize=True) * 100}\\n\")\n",
+    "\n",
     "\n",
     "figure()\n",
     "plot_bar_chart(\n",
