--- a/notebooks/ecommerce_behaviour/_4_1_ecom_eval_DT.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_1_ecom_eval_DT.ipynb
@@ -159,6 +159,7 @@
     "\n",
     " \n",
     "target='is_purchase'\n",
+    "taget_metric = 'f2'\n",
     "vars: list[str] = df.columns.to_list()\n",
     "labels: list = list(df[target].unique())\n",
     "\n",
