--- a/notebooks/ecommerce_behaviour/_2.4_ecom_data_prep_scaling_cleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.4_ecom_data_prep_scaling_cleaned.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
-    "#filepath=r'dataset/df_ecom_2_2_mv_input.csv'\n",
+    "filepath=r'dataset/df_ecom_2_2_mv_input.csv'\n",
     "\n",
-    "filepath=r'dataset/df_ecom_2_3_outliers_input.csv'\n",
+    "#filepath=r'dataset/df_ecom_2_3_outliers_input.csv'\n",
     "\n",
     "file_tag = \"df_ecom_scaling_input\""
    ]
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,11 +107,11 @@
       " 2   price                258334 non-null  float64\n",
       " 3   is_purchase          258334 non-null  int64  \n",
       " 4   activity_in_session  258334 non-null  float64\n",
-      " 5   week_of_month        258334 non-null  float64\n",
+      " 5   week_of_month        258334 non-null  int64  \n",
       " 6   is_weekend           258334 non-null  int64  \n",
-      " 7   day                  258334 non-null  float64\n",
+      " 7   day                  258334 non-null  int64  \n",
       " 8   brand_value          258334 non-null  float64\n",
-      " 9   product_category     258334 non-null  float64\n",
+      " 9   product_category     258334 non-null  int64  \n",
       " 10  time_of_day_sin      258334 non-null  float64\n",
       " 11  time_of_day_cos      258334 non-null  float64\n",
       " 12  day_of_week_sin      258334 non-null  float64\n",
@@ -120,7 +120,7 @@
       " 15  hour_cos             258334 non-null  float64\n",
       " 16  min_sin              258334 non-null  float64\n",
       " 17  min_cos              258334 non-null  float64\n",
-      "dtypes: float64(16), int64(2)\n",
+      "dtypes: float64(13), int64(5)\n",
       "memory usage: 37.4 MB\n"
      ]
     }
@@ -129,41 +129,33 @@
     "# test_data=True\n",
     "test_data=False\n",
     "\n",
-    "# use to evaluate strategies. otherwise False to just transform data \n",
     "evaluate=True\n",
-    "# evaluate=False\n",
-    "\n",
     "\n",
     "if test_data==True:\n",
     "\n",
     "    df=pd.read_csv(filepath)\n",
     "\n",
-    "    # 1% sample\n",
-    "    df=df.sample(frac=0.01, replace=False)\n",
+    "    # 10% sample\n",
+    "    df=df.sample(frac=0.4, replace=False)\n",
     "    \n",
     "\n",
     "else:\n",
     "    df=pd.read_csv(filepath)\n",
-    "    # 50% sample\n",
-    "    # data=data.sample(frac=0.5, replace=False)\n",
     "\n",
     " \n",
     "target='is_purchase'\n",
-    "vars: list[str] = df.columns.to_list()\n",
-    "\n",
-    "\n",
+    "eval_metric_1='precision'\n",
+    "eval_metric_2='f2'\n",
     "# ensure sorting by day_of_year for correct splitting \n",
     "# \"When in the presence of temporal data, data partition shall use older data to train and newer to test, in order to not use future data to classify past data. In any other case, partition shall be random.\"\n",
     "df.sort_values(by='day', inplace=True)\n",
     "\n",
-    "\n",
-    "df\n",
     "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,14 +181,14 @@
        "      <th></th>\n",
        "      <th>category_code_lvl_1</th>\n",
        "      <th>category_code_lvl_2</th>\n",
-       "      <th>category_code_lvl_3</th>\n",
        "      <th>price</th>\n",
+       "      <th>is_purchase</th>\n",
+       "      <th>activity_in_session</th>\n",
        "      <th>week_of_month</th>\n",
        "      <th>is_weekend</th>\n",
        "      <th>day</th>\n",
-       "      <th>is_view</th>\n",
-       "      <th>is_cart</th>\n",
-       "      <th>is_purchase</th>\n",
+       "      <th>brand_value</th>\n",
+       "      <th>product_category</th>\n",
        "      <th>time_of_day_sin</th>\n",
        "      <th>time_of_day_cos</th>\n",
        "      <th>day_of_week_sin</th>\n",
@@ -210,144 +202,144 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>128.450000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.817</td>\n",
-       "      <td>-0.577</td>\n",
-       "      <td>-0.000</td>\n",
-       "      <td>1.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2836</th>\n",
-       "      <td>11.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>125.0</td>\n",
-       "      <td>993.422936</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.888</td>\n",
-       "      <td>0.460</td>\n",
-       "      <td>-1.000</td>\n",
-       "      <td>-0.027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2837</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0.790000</td>\n",
+       "      <td>949.47</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.979</td>\n",
-       "      <td>0.203</td>\n",
-       "      <td>-0.921</td>\n",
-       "      <td>0.389</td>\n",
+       "      <td>1</td>\n",
+       "      <td>779.2</td>\n",
+       "      <td>2334</td>\n",
+       "      <td>0.624</td>\n",
+       "      <td>-0.781</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>-0.632</td>\n",
+       "      <td>0.966</td>\n",
+       "      <td>0.259</td>\n",
+       "      <td>-0.105</td>\n",
+       "      <td>0.995</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2838</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>7.390000</td>\n",
+       "      <th>1408</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>170.14</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>25.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.998</td>\n",
-       "      <td>-0.068</td>\n",
-       "      <td>0.848</td>\n",
-       "      <td>-0.530</td>\n",
+       "      <td>1</td>\n",
+       "      <td>282.5</td>\n",
+       "      <td>2164</td>\n",
+       "      <td>-0.975</td>\n",
+       "      <td>0.221</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>-0.632</td>\n",
+       "      <td>-0.966</td>\n",
+       "      <td>-0.259</td>\n",
+       "      <td>-0.208</td>\n",
+       "      <td>-0.978</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2839</th>\n",
+       "      <th>1407</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>44.53</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>427.040000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>51.1</td>\n",
+       "      <td>18640</td>\n",
+       "      <td>-0.975</td>\n",
+       "      <td>0.221</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>-0.632</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-1.000</td>\n",
+       "      <td>-0.669</td>\n",
+       "      <td>0.743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1406</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>211.32</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>173.5</td>\n",
+       "      <td>2377</td>\n",
+       "      <td>-0.975</td>\n",
+       "      <td>0.221</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>-0.632</td>\n",
+       "      <td>-0.866</td>\n",
+       "      <td>-0.500</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>-0.995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1405</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.942</td>\n",
-       "      <td>-0.335</td>\n",
-       "      <td>0.848</td>\n",
-       "      <td>-0.530</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>453.16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>779.2</td>\n",
+       "      <td>4065</td>\n",
+       "      <td>-0.624</td>\n",
+       "      <td>-0.781</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>-0.632</td>\n",
+       "      <td>-0.707</td>\n",
+       "      <td>0.707</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>-0.914</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      category_code_lvl_1  category_code_lvl_2  category_code_lvl_3  \\\n",
-       "0                     6.0                 42.0                102.0   \n",
-       "2836                 11.0                 57.0                125.0   \n",
-       "2837                  3.0                 20.0                 62.0   \n",
-       "2838                  5.0                 27.0                 76.0   \n",
-       "2839                  0.0                  0.0                  2.0   \n",
+       "      category_code_lvl_1  category_code_lvl_2   price  is_purchase  \\\n",
+       "0                     0.0                  3.0  949.47            0   \n",
+       "1408                  0.0                  3.0  170.14            0   \n",
+       "1407                 12.0                 60.0   44.53            1   \n",
+       "1406                  0.0                  3.0  211.32            0   \n",
+       "1405                  0.0                  6.0  453.16            1   \n",
        "\n",
-       "           price  week_of_month  is_weekend  day  is_view  is_cart  \\\n",
-       "0     128.450000              0           0    0        1        0   \n",
-       "2836  993.422936              0           0    0        1        0   \n",
-       "2837    0.790000              0           0    0        1        0   \n",
-       "2838    7.390000              0           0    0        1        0   \n",
-       "2839  427.040000              0           0    0        1        0   \n",
+       "      activity_in_session  week_of_month  is_weekend  day  brand_value  \\\n",
+       "0                     3.0              1           0    1        779.2   \n",
+       "1408                 25.0              1           0    1        282.5   \n",
+       "1407                  0.0              1           0    1         51.1   \n",
+       "1406                  1.0              1           0    1        173.5   \n",
+       "1405                  3.0              1           0    1        779.2   \n",
        "\n",
-       "      is_purchase  time_of_day_sin  time_of_day_cos  day_of_week_sin  \\\n",
-       "0               0              0.0              1.0              1.0   \n",
-       "2836            0             -0.0              1.0              1.0   \n",
-       "2837            0             -0.0              1.0              1.0   \n",
-       "2838            0              0.0              1.0              1.0   \n",
-       "2839            0              0.0              1.0              1.0   \n",
+       "      product_category  time_of_day_sin  time_of_day_cos  day_of_week_sin  \\\n",
+       "0                 2334            0.624           -0.781           -0.775   \n",
+       "1408              2164           -0.975            0.221           -0.775   \n",
+       "1407             18640           -0.975            0.221           -0.775   \n",
+       "1406              2377           -0.975            0.221           -0.775   \n",
+       "1405              4065           -0.624           -0.781           -0.775   \n",
        "\n",
        "      day_of_week_cos  hour_sin  hour_cos  min_sin  min_cos  \n",
-       "0                 0.0     0.817    -0.577   -0.000    1.000  \n",
-       "2836              0.0    -0.888     0.460   -1.000   -0.027  \n",
-       "2837              0.0     0.979     0.203   -0.921    0.389  \n",
-       "2838              0.0     0.998    -0.068    0.848   -0.530  \n",
-       "2839              0.0     0.942    -0.335    0.848   -0.530  "
+       "0              -0.632     0.966     0.259   -0.105    0.995  \n",
+       "1408           -0.632    -0.966    -0.259   -0.208   -0.978  \n",
+       "1407           -0.632     0.000    -1.000   -0.669    0.743  \n",
+       "1406           -0.632    -0.866    -0.500    0.105   -0.995  \n",
+       "1405           -0.632    -0.707     0.707    0.407   -0.914  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
