adjusted feat engineering. added evaluations

--- a/notebooks/google_merch_store/5_ga4_merch_scaling.ipynb
+++ b/notebooks/google_merch_store/5_ga4_merch_scaling.ipynb
@@ -689,7 +689,8 @@
     "# Analysis\n",
     "\n",
     "- recall improvement on both\n",
-    "- accuracy drop\n"
+    "- accuracy drop\n",
+    "- advancing with approach 2 for more balanced precision and accuracy increase and bettter f2\n"
    ]
   },
   {
