added filetag naming for visualizations

--- a/notebooks/google_merch_store/2_ga4_merch_encoding.ipynb
+++ b/notebooks/google_merch_store/2_ga4_merch_encoding.ipynb
@@ -157,29 +157,29 @@
     "\n",
     "## Encoding logic\n",
     "\n",
-    "- event_name: \n",
+    "- event_name: content interaction events -> page_view -> ecommerce events\n",
     "\n",
-    "- device_category \n",
+    "- device_category: desktop, tablet middle, mobile\n",
     "\n",
-    "- device_mobile_brand_name \n",
+    "- device_mobile_brand_name: PC Brands and Browsers together. Smartphones together \n",
     "\n",
-    "- device_mobile_model_name \n",
+    "- device_mobile_model_name: Grouped similarly with the brand name\n",
     "\n",
-    "- device_language \n",
+    "- device_language: english languages grouped and with higher ordinal values\n",
     "\n",
-    "- device_operating_system_version \n",
+    "- device_operating_system_version: grouped similarly to device and browser versions. clustered PC and smartphone values\n",
     "\n",
-    "- device_operating_system \n",
+    "- device_operating_system:  clustered PC and smartphone values\n",
     "\n",
-    "- device_web_info_browser \n",
+    "- device_web_info_browser: Chrome in the middle.\n",
     "\n",
-    "- device_web_info_browser_version \n",
+    "- device_web_info_browser_version: Chrome in the middle.\n",
     "\n",
-    "- geo_country\n",
+    "- geo_country: no particular order. two values\n",
     "\n",
-    "- traffic_source_medium \n",
+    "- traffic_source_medium: google traffic in the middle together with direct\n",
     "\n",
-    "- traffic_source_source \n",
+    "- traffic_source_source: google traffic in the middle together with direct\n",
     "\n",
     "- page_path_level_1 : shop categories+products closer, then main ecommerce journey and misc pages\n",
     "\n",
