--- a/notebooks/google_merch_store/10_ga4_merch_eval_DT.ipynb
+++ b/notebooks/google_merch_store/10_ga4_merch_eval_DT.ipynb
@@ -231,7 +231,7 @@
     "\n",
     "# Visualize the distribution\n",
     "figure(figsize=(6, 4))\n",
-    "plot_multibar_chart(labels, values, title=\"Data distribution per dataset\")\n",
+    "plot_multibar_chart(labels, values, title=f\"{file_tag} Data distribution per dataset\")\n",
     "show()"
    ]
   },
