--- a/notebooks/ecommerce_behaviour/_2.3_ecom_data_prep_outliers_vcleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.3_ecom_data_prep_outliers_vcleaned.ipynb
@@ -1066,9 +1066,9 @@
     "    figure()\n",
     "    eval_1: dict[str, list] = evaluate_approach(train_1, test_1, target='is_purchase', metric=eval_metric_2)\n",
     "    plot_multibar_chart(\n",
-    "        [\"NB\", \"KNN\"], eval_1, title=f\"{file_tag}_approach_1_evaluation_metric_2\", percentage=True\n",
+    "        [\"NB\", \"KNN\"], eval_1, title=f\"{file_tag}_approach_1_evaluation ({eval_metric_2})\", percentage=True\n",
     "    )\n",
-    "    savefig(f\"images/{file_tag}_approach_1_evaluation_metric_2.png\")\n",
+    "    savefig(f\"images/{file_tag}_approach_1_evaluation_{eval_metric_2}.png\")\n",
     "    show()"
    ]
   },
@@ -1284,9 +1284,9 @@
     "    figure()\n",
     "    eval_2: dict[str, list] = evaluate_approach(train_2, test_2, target='is_purchase', metric=eval_metric_2)\n",
     "    plot_multibar_chart(\n",
-    "        [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag}_approach_2_evaluation_metric_2\", percentage=True\n",
+    "        [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag}_approach_2_evaluation ({eval_metric_2})\", percentage=True\n",
     "    )\n",
-    "    savefig(f\"images/{file_tag}_approach_2_evaluation_metric_2.png\")\n",
+    "    savefig(f\"images/{file_tag}_approach_2_evaluation_{eval_metric_2}.png\")\n",
     "    show()"
    ]
   },
