--- a/notebooks/ecommerce_behaviour/_2.6_ecom_data_prep_balancing_vcleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.6_ecom_data_prep_balancing_vcleaned.ipynb
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1597,7 @@
     "    data_save.to_csv(f\"dataset/df_ecom_2_6_bal_input.csv\", index=False)\n",
     "\n",
     "    # sampled versions to keep consistency    \n",
-    "    sample=0.05\n",
+    "    sample=0.2\n",
     "\n",
     "    data_sample = df.groupby('day').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
     "    data_sample.to_csv(f\"dataset/df_ecom_2_6_bal_input_sample.csv\", index=False)\n",
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1669,8 +1669,8 @@
       "      dtype='object')\n",
       "Original class distribution:\n",
       "is_purchase\n",
-      "0    59.106884\n",
-      "1    40.893116\n",
+      "0    59.665082\n",
+      "1    40.334918\n",
       "Name: proportion, dtype: float64\n",
       "\n",
       "New class distribution:\n",
@@ -1679,7 +1679,8 @@
       "0    50.0\n",
       "Name: proportion, dtype: float64\n",
       "\n",
-      "(2828, 15)\n"
+      "(230440, 15)\n",
+      "(11317, 15)\n"
      ]
     }
    ],
@@ -1710,7 +1711,7 @@
     "\n",
     "    \n",
     "    # sampled versions to keep consistency    \n",
-    "    sample=0.05\n",
+    "    sample=0.2\n",
     "    \n",
     "    train_save_sample = train_save.groupby('day').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
     "    train_save_sample=apply_strategy_3(train_save_sample)         \n",
@@ -1720,7 +1721,7 @@
     "    test_save_sample = test.groupby('day').apply(lambda x: sample_per_day(x, sample)).reset_index(drop=True)\n",
     "    test_save_sample.to_csv(f\"dataset/df_ecom_2_6_bal_input_test_sample.csv\", index=False)\n",
     "    \n",
-    "    \n",
+    "    print(train_save.shape)\n",
     "    print(test_save_sample.shape)"
    ]
   },
