--- a/notebooks/google_merch_store/4_ga4_merch_outliers.ipynb
+++ b/notebooks/google_merch_store/4_ga4_merch_outliers.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
     "    plot_multibar_chart(\n",
     "        [\"NB\", \"KNN\"], eval_1, title=f\"{file_tag} | Outlier Truncation evaluation\", percentage=True\n",
     "    )\n",
-    "    savefig(f\"images/{file_tag}_approach_1_evaluation.png\")\n",
+    "    savefig(f\"images/{file_tag}_outliers_truncation_evaluation.png\")\n",
     "    show()"
    ]
   },
@@ -667,7 +667,7 @@
     "    plot_multibar_chart(\n",
     "        [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag} | Drop Outlier evaluation\", percentage=True\n",
     "    )\n",
-    "    savefig(f\"images/{file_tag}_approach_2_evaluation.png\")\n",
+    "    savefig(f\"images/{file_tag}_outliers_drop_evaluation.png\")\n",
     "    show()"
    ]
   },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
