--- a/notebooks/google_merch_store/5_ga4_merch_scaling.ipynb
+++ b/notebooks/google_merch_store/5_ga4_merch_scaling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
     "    plot_multibar_chart(\n",
     "        [\"NB\", \"KNN\"], eval_1, title=f\"{file_tag} | Standard Scaler Evaluation\", percentage=True\n",
     "    )\n",
-    "    savefig(f\"images/{file_tag}_approach_1_evaluation.png\")\n",
+    "    savefig(f\"images/{file_tag}_standard_scaler_evaluation.png\")\n",
     "    show()"
    ]
   },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
     "    plot_multibar_chart(\n",
     "        [\"NB\", \"KNN\"], eval_2, title=f\"{file_tag} MinMax Scaler evaluation\", percentage=True\n",
     "    )\n",
-    "    savefig(f\"images/{file_tag}_approach_2_evaluation.png\")\n",
+    "    savefig(f\"images/{file_tag}_minMax_scaler_evaluation.png\")\n",
     "    show()"
    ]
   },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -521,6 +521,9 @@
     "\n",
     "    axs[0, 2].set_title(\"MinMax normalization\")\n",
     "    data_2.boxplot(ax=axs[0, 2])\n",
+    "\n",
+    "    savefig(f\"images/{file_tag}_scaling_plots_evaluation.png\")\n",
+    "\n",
     "    show()"
    ]
   },
@@ -540,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
