--- a/notebooks/ecommerce_behaviour/_2.1_ecom_data_prep_enconding_vcleaned.ipynb
+++ b/notebooks/ecommerce_behaviour/_2.1_ecom_data_prep_enconding_vcleaned.ipynb
@@ -599,11 +599,9 @@
     "# Encoding\n",
     "- we need to do the enconding of the symoblic and cyclical vraibles of the dataset\n",
     "    - Simbolyc\n",
-    "        - event_type\n",
-    "        - brand\n",
+    "        - product_category\n",
     "        - category_code_lvl_1\n",
     "        - category_code_lvl_2\n",
-    "        - category_code_lvl_3\n",
     "    - Cyclical\n",
     "        - time_of_day\n",
     "        - day_of_week\n",
@@ -613,13 +611,51 @@
     "    - Numeric \n",
     "        - week_of_month\n",
     "        - day\n",
+    "        - brand_value\n",
+    "        - activity_in_session\n",
+    "        - price\n",
     "\n",
     "    - Binary\n",
     "        - is_weekend\n",
-    "        - conversion\n",
     "\n",
     "\n",
     "{'numeric': ['price', 'week_of_month', 'day', 'hour', 'min'], 'binary': ['conversion', 'is_weekend'], 'date': ['event_time'], 'symbolic': ['event_type', 'brand', 'category_code_lvl_1', 'category_code_lvl_2', 'category_code_lvl_3', 'day_of_week', 'time_of_day']}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encoding Detail\n",
+    "\n",
+    "- Ordinal enconding:\n",
+    "  - is_weekend\n",
+    "    - 0: weekday\n",
+    "    - 1: weekend\n",
+    "\n",
+    "- Hierachical encoding: Simbolyic Variables\n",
+    "  - category_code_lvl_1\n",
+    "    - Rule: Similarity between categories of products(eletronics more close to computers than furniture)\n",
+    "  - category_code_lvl_2\n",
+    "    - Rule: Similarity between 2nd category level of products, and according to the hierarchy of the category_code_lvl_1 \n",
+    "  - product_category\n",
+    "    - Rule: cast between product_id + category_code_lvl_2. Order the output values through the order previously defined for category_code_lvl_2 \n",
+    " \n",
+    "\n",
+    "- Cyclical enconding: Simbolyic Variables\n",
+    "  - day_of_week\n",
+    "  - time_of_day\n",
+    "  - hour\n",
+    "  - min\n",
+    "\n",
+    "- Numeric Values that don't need encoding\n",
+    "  - week_of_month\n",
+    "  - day\n",
+    "  - brand_value\n",
+    "  - activity_in_session\n",
+    "  - price\n",
+    "\n",
+    "Note: week_of_month and day in our case are ordinal variables, and not cyclical, because our dataset only has data for 1 month, nov/19, which means that these two variables don't repeat over time in our dataset."
    ]
   },
   {
@@ -879,11 +915,9 @@
     "#### bulk Symbolic mapping through Excel\n",
     "\n",
     "    - Simbolyc\n",
-    "        - event_type\n",
     "        - product_category\n",
     "        - category_code_lvl_1\n",
     "        - category_code_lvl_2\n",
-    "        - \n",
     "\n",
     "    - Binary\n",
     "        - is_weekend"
